--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ credentials.sbt
 # Scala-IDE specific
 .scala_dependencies
 *.iml
+
+# OS X specific
+.DS_Store
+
+*.sublime-project
+*.sublime-workspace
